maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:39: error: not found: value &&
  if(aMurOuest(largeurDepart+1,hauteurDepart)== false &&  && largeurDepart+1 <= largeur)
                                                          ^